fix (contact us spacing)

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -326,6 +326,7 @@ body {
           color: var(--col-second);
           cursor: context-menu;
           margin: 3rem 0 2rem;
+          padding-left: 20px;
         }
         ul {
           list-style: none;
